# llama-cpp-rs

./: Cargo.toml  README.md  VLM_IMPLEMENTATION.md  VLM_QUICK_REFERENCE.md
examples/vlm/: Cargo.toml
examples/vlm/src/: main.rs
llama-cpp-2/: Cargo.toml
llama-cpp-2/src/: lib.rs  model.rs  vision.rs
llama-cpp-2/tests/: vlm.rs
