[package]
name = "llama-cpp-vlm-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
llama-cpp-2 = { path = "../../llama-cpp-2", features = ["mtmd", "sampler"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
